# zar

./: CMakeLists.txt  Doxyfile  INSTALL  README
doc/: CMakeLists.txt
doc/design/: CMakeLists.txt  design.tex
doc/design/tex/: client.tex  coding_style.tex  commands.tex  communication.tex  design.tex  libraries.tex  modules.tex  preface.tex  protocol.tex  server.tex  types.tex
src/: CMakeLists.txt
src/czar/: application.cpp  application.hpp  czar.cpp
src/lib/exception/: exception.cpp  exception.hpp  exit.cpp  exit.hpp  validate.tpp
src/lib/strand/: strand.cpp  strand.hpp
src/lib/string/: concatenate.tpp  enumerate.tpp  stream.tpp
src/modules/communication/: acceptor.cpp  acceptor.hpp  connection.cpp  connection.hpp  connector.cpp  connector.hpp  file.cpp  file.hpp  message.cpp  message.hpp  receiver.cpp  receiver.hpp  sender.cpp  sender.hpp  socket.cpp  socket.hpp  tcp_socket.cpp  tcp_socket.hpp  types.cpp  types.hpp
src/modules/communication/detail/: acceptor.cpp  acceptor.hpp  connection.cpp  connection.hpp  connector.cpp  connector.hpp  receiver.cpp  receiver.hpp  sender.cpp  sender.hpp
src/modules/game/: game.cpp  game.hpp
src/modules/game/detail/: player.cpp  player.hpp
src/modules/lobby/: lobby.cpp  lobby.hpp  session.cpp  session.hpp
src/modules/lobby/detail/: session_reaper.cpp  session_reaper.hpp
src/modules/logging/: level.cpp  level.hpp  log.cpp  log.hpp  logger.cpp  logger.hpp  module_logger.cpp  module_logger.hpp
src/unit_test/: unit_test.cpp
src/unit_test/lib/: string.cpp
src/zard/: configuration.cpp  configuration.hpp  options.cpp  options.hpp  zard.cpp
